--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Børnegården Katholt</title>
+    <title>Børnegården</title>
     <link rel="stylesheet" href="../css/styles_forsiden.css">
     <link rel="stylesheet" href="../css/navbar-footer.css">
     <link rel="stylesheet" href="./css/font.css">
@@ -84,7 +84,7 @@
 
     <!-- sted Section  -->
     <section id="sted">
-        <h1> Et sted hvor børn <br> trives, leger og <br>udvikles</h1>
+        <h1> Et sted hvor børn trives, leger og <br>udvikles</h1>
         <h2> Katholt – hvor leg, læring og 
             <br> fællesskab skaber trygge rammer.
         </h2>
@@ -213,3 +213,4 @@
     <script src="../js/navbar.js"></script>
 </body>
 </html>
+
