--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Børnegården Katholt</title>
+    <title>Børnegården Katholt-xxx</title>
     <link rel="stylesheet" href="../css/styles_forsiden.css">
     <link rel="stylesheet" href="../css/navbar-footer.css">
     <link rel="stylesheet" href="./css/font.css">
@@ -213,3 +213,4 @@
     <script src="../js/navbar.js"></script>
 </body>
 </html>
+
